samples/_failures_safe/1761400079_35af3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d177a7c3.c: In function ‘tokenize’:
./samples/SAFE/__tmp_d177a7c3.c:160:9: error: expected declaration or statement at end of input
  160 |         tokens[token_count].column = col;
      |         ^~~~~~
./samples/SAFE/__tmp_d177a7c3.c:160:9: error: expected declaration or statement at end of input
